@@ -6,6 +6,7 @@ import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.security.SecurityRequirement;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.StringUtils;
@@ -26,20 +27,24 @@ import org.springframework.web.bind.annotation.RequestHeader;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.multipart.MultipartFile;
-import uk.gov.hmcts.reform.authorisation.generators.AuthTokenGenerator;
 import uk.gov.hmcts.reform.ccd.client.CoreCaseDataApi;
 import uk.gov.hmcts.reform.ccd.client.model.CaseDataContent;
 import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
 import uk.gov.hmcts.reform.ccd.client.model.Event;
 import uk.gov.hmcts.reform.ccd.client.model.StartEventResponse;
 import uk.gov.hmcts.reform.idam.client.IdamClient;
+import uk.gov.hmcts.reform.prl.constants.PrlAppsConstants;
 import uk.gov.hmcts.reform.prl.enums.LanguagePreference;
+import uk.gov.hmcts.reform.prl.framework.exceptions.DocumentGenerationException;
 import uk.gov.hmcts.reform.prl.models.Element;
 import uk.gov.hmcts.reform.prl.models.complextypes.PartyDetails;
 import uk.gov.hmcts.reform.prl.models.complextypes.citizen.documents.UploadedDocuments;
+import uk.gov.hmcts.reform.prl.models.documents.DocumentResponse;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.CaseData;
+import uk.gov.hmcts.reform.prl.models.dto.ccd.DocumentManagementDetails;
 import uk.gov.hmcts.reform.prl.models.dto.citizen.DeleteDocumentRequest;
 import uk.gov.hmcts.reform.prl.models.dto.citizen.DocumentDetails;
+import uk.gov.hmcts.reform.prl.models.dto.citizen.DocumentRequest;
 import uk.gov.hmcts.reform.prl.models.dto.citizen.GenerateAndUploadDocumentRequest;
 import uk.gov.hmcts.reform.prl.models.dto.citizen.UploadedDocumentRequest;
 import uk.gov.hmcts.reform.prl.models.dto.notify.EmailTemplateVars;
@@ -55,9 +60,9 @@ import uk.gov.hmcts.reform.prl.utils.CaseUtils;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static javax.ws.rs.core.MediaType.APPLICATION_JSON;
+import static org.apache.commons.lang3.ObjectUtils.isNotEmpty;
 import static org.springframework.http.MediaType.APPLICATION_JSON_VALUE;
 import static org.springframework.http.MediaType.MULTIPART_FORM_DATA_VALUE;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.C100_CASE_TYPE;
@@ -66,41 +71,23 @@ import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.CITIZEN_UPLOADE
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.INVALID_CLIENT;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.JURISDICTION;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.PARTY_ID;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.SUCCESS;
 import static uk.gov.hmcts.reform.prl.utils.ElementUtils.element;
 
 @Slf4j
 @RestController
 @SecurityRequirement(name = "Bearer Authentication")
+@RequiredArgsConstructor(onConstructor = @__(@Autowired))
 public class CaseDocumentController {
-
-    @Autowired
-    private DocumentGenService documentGenService;
-
-    @Autowired
-    private UploadDocumentService uploadService;
-
-    @Autowired
-    private AuthorisationService authorisationService;
-
-    @Autowired
-    CoreCaseDataApi coreCaseDataApi;
-
-    @Autowired
-    ObjectMapper objectMapper;
-
-    @Autowired
-    private AuthTokenGenerator authTokenGenerator;
-
-    @Autowired
-    private IdamClient idamClient;
-
-    @Autowired
-    CaseService caseService;
-
+    private final DocumentGenService documentGenService;
+    private final UploadDocumentService uploadService;
+    private final AuthorisationService authorisationService;
+    private final CoreCaseDataApi coreCaseDataApi;
+    private final ObjectMapper objectMapper;
+    private final IdamClient idamClient;
+    private final CaseService caseService;
     Integer fileIndex;
-
-    @Autowired
-    private EmailService emailService;
+    private final EmailService emailService;
 
     @Value("${citizen.url}")
     private String dashboardUrl;
@@ -143,7 +130,6 @@ public class CaseDocumentController {
         return getUploadedDocumentsList(
             generateAndUploadDocumentRequest,
             authorisation,
-            s2sToken,
             caseId,
             tempCaseData,
             uploadedDocuments
@@ -152,11 +138,10 @@ public class CaseDocumentController {
     }
 
     private ResponseEntity<Object> getUploadedDocumentsList(@RequestBody GenerateAndUploadDocumentRequest generateAndUploadDocumentRequest,
-                                                    @RequestHeader(HttpHeaders.AUTHORIZATION) String authorisation,
-                                                    @RequestHeader("serviceAuthorization") String s2sToken,
-                                                    String caseId,
-                                                    CaseData tempCaseData,
-                                                    UploadedDocuments uploadedDocuments) throws JsonProcessingException {
+                                                            @RequestHeader(HttpHeaders.AUTHORIZATION) String authorisation,
+                                                            String caseId,
+                                                            CaseData tempCaseData,
+                                                            UploadedDocuments uploadedDocuments) throws JsonProcessingException {
         List<Element<UploadedDocuments>> uploadedDocumentsList;
         if (uploadedDocuments != null) {
             if (tempCaseData.getCitizenUploadedDocumentList() != null
@@ -170,15 +155,15 @@ public class CaseDocumentController {
 
             CaseData caseData = CaseData.builder().id(Long.parseLong(caseId))
                 .citizenUploadedDocumentList(uploadedDocumentsList)
-                .citizenUploadQuarentineDocsList(uploadedDocumentsList)
+                .documentManagementDetails(DocumentManagementDetails.builder()
+                                               .citizenUploadQuarantineDocsList(uploadedDocumentsList)
+                                               .build())
                 .build();
             caseService.updateCase(
                 caseData,
                 authorisation,
-                s2sToken,
                 caseId,
-                CITIZEN_UPLOADED_DOCUMENT,
-                null
+                CITIZEN_UPLOADED_DOCUMENT
             );
 
             final String partyId = generateAndUploadDocumentRequest.getValues().get(PARTY_ID);
@@ -268,7 +253,10 @@ public class CaseDocumentController {
             CaseData caseData = CaseData.builder()
                 .id(Long.parseLong(caseId))
                 .citizenUploadedDocumentList(uploadedDocumentsList)
-                .citizenUploadQuarentineDocsList(uploadedDocumentsList)
+                .documentManagementDetails(DocumentManagementDetails.builder()
+                                               .citizenUploadQuarantineDocsList(uploadedDocumentsList)
+                                               .build())
+
                 .build();
 
             StartEventResponse startEventResponse =
@@ -331,20 +319,19 @@ public class CaseDocumentController {
             tempUploadedDocumentsList = tempCaseData.getCitizenUploadedDocumentList();
             uploadedDocumentsList = tempUploadedDocumentsList.stream().filter(element -> !documenIdToBeDeleted.equalsIgnoreCase(
                 element.getId().toString()))
-                .collect(Collectors.toList());
+                .toList();
         }
-        log.info("uploadedDocumentsList::" + uploadedDocumentsList.size());
         CaseData caseData = CaseData.builder().id(Long.parseLong(caseId))
             .citizenUploadedDocumentList(uploadedDocumentsList)
-            .citizenUploadQuarentineDocsList(uploadedDocumentsList)
+            .documentManagementDetails(DocumentManagementDetails.builder()
+                                           .citizenUploadQuarantineDocsList(uploadedDocumentsList)
+                                           .build())
             .build();
         caseService.updateCase(
             caseData,
             authorisation,
-            s2sToken,
             caseId,
-            CITIZEN_UPLOADED_DOCUMENT,
-            null
+            CITIZEN_UPLOADED_DOCUMENT
         );
         return "SUCCESS";
     }
@@ -365,7 +352,8 @@ public class CaseDocumentController {
         if (!isAuthorized(authorisation, serviceAuthorization)) {
             throw (new RuntimeException(INVALID_CLIENT));
         }
-        return ResponseEntity.ok(documentGenService.uploadDocument(authorisation, file));
+        DocumentResponse docResp = documentGenService.uploadDocument(authorisation, file);
+        return ResponseEntity.ok(docResp);
     }
 
     @DeleteMapping("/{documentId}/delete")
@@ -411,5 +399,59 @@ public class CaseDocumentController {
             return ResponseEntity.notFound().build();
         }
     }
+
+    @PostMapping(path = "/citizen-generate-document", consumes = APPLICATION_JSON, produces = APPLICATION_JSON)
+    @Operation(description = "Generate document from citizen statements & upload to CDAM")
+    @ApiResponses(value = {
+        @ApiResponse(responseCode = "200", description = "Uploaded Successfully"),
+        @ApiResponse(responseCode = "400", description = "Bad Request while uploading the document"),
+        @ApiResponse(responseCode = "401", description = "Provided Authorization token is missing or invalid"),
+        @ApiResponse(responseCode = "500", description = "Internal Server Error")
+    })
+    public ResponseEntity<Object> citizenGenerateDocument(@RequestHeader(HttpHeaders.AUTHORIZATION) String authorisation,
+                                                        @RequestHeader(PrlAppsConstants.SERVICE_AUTHORIZATION_HEADER) String serviceAuthorization,
+                                                        @RequestBody DocumentRequest documentRequest) {
+        if (!isAuthorized(authorisation, serviceAuthorization)) {
+            throw (new RuntimeException(INVALID_CLIENT));
+        }
+
+        DocumentResponse documentResponse = null;
+        try {
+            documentResponse = documentGenService.generateAndUploadDocument(authorisation, documentRequest);
+        } catch (DocumentGenerationException dge) {
+            log.error("Exception in generating a document", dge);
+            return ResponseEntity.internalServerError().body("Error in generating a document");
+        }
+
+        if (isNotEmpty(documentResponse)) {
+            return ResponseEntity.ok(documentResponse);
+        } else {
+            return ResponseEntity.internalServerError().body("Error in generating citizen document");
+        }
+    }
+
+    @PostMapping(path = "/citizen-submit-documents", consumes = APPLICATION_JSON, produces = APPLICATION_JSON)
+    @Operation(description = "Move citizen uploaded documents to Quarantine & update case")
+    @ApiResponses(value = {
+        @ApiResponse(responseCode = "200", description = "Uploaded Successfully"),
+        @ApiResponse(responseCode = "400", description = "Bad Request while uploading the document"),
+        @ApiResponse(responseCode = "401", description = "Provided Authorization token is missing or invalid"),
+        @ApiResponse(responseCode = "500", description = "Internal Server Error")
+    })
+    public ResponseEntity<Object> citizenSubmitDocuments(@RequestHeader(HttpHeaders.AUTHORIZATION) String authorisation,
+                                                         @RequestHeader(PrlAppsConstants.SERVICE_AUTHORIZATION_HEADER) String serviceAuthorization,
+                                                         @RequestBody DocumentRequest documentRequest) {
+        if (!isAuthorized(authorisation, serviceAuthorization)) {
+            throw (new RuntimeException(INVALID_CLIENT));
+        }
+
+        CaseDetails caseDetails = documentGenService.citizenSubmitDocuments(authorisation, documentRequest);
+        if (isNotEmpty(caseDetails)) {
+            return ResponseEntity.ok(SUCCESS);
+        } else {
+            return ResponseEntity.internalServerError().body("Error in submitting citizen documents");
+        }
+    }
+
 }
 
