@@ -2,12 +2,15 @@ package uk.gov.hmcts.reform.prl.services;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.collections.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
+import uk.gov.hmcts.reform.prl.constants.OrderEmailConstants;
 import uk.gov.hmcts.reform.prl.constants.PrlAppsConstants;
+import uk.gov.hmcts.reform.prl.enums.ContactPreferences;
 import uk.gov.hmcts.reform.prl.enums.LanguagePreference;
 import uk.gov.hmcts.reform.prl.enums.State;
 import uk.gov.hmcts.reform.prl.enums.YesNoDontKnow;
@@ -16,49 +19,93 @@ import uk.gov.hmcts.reform.prl.enums.manageorders.DeliveryByEnum;
 import uk.gov.hmcts.reform.prl.enums.manageorders.OtherOrganisationOptions;
 import uk.gov.hmcts.reform.prl.enums.manageorders.SelectTypeOfOrderEnum;
 import uk.gov.hmcts.reform.prl.enums.manageorders.ServeOtherPartiesOptions;
+import uk.gov.hmcts.reform.prl.enums.serviceofapplication.SoaCitizenServingRespondentsEnum;
+import uk.gov.hmcts.reform.prl.enums.serviceofapplication.SoaSolicitorServingRespondentsEnum;
+import uk.gov.hmcts.reform.prl.models.Address;
+import uk.gov.hmcts.reform.prl.models.DraftOrder;
 import uk.gov.hmcts.reform.prl.models.Element;
+import uk.gov.hmcts.reform.prl.models.common.dynamic.DynamicMultiSelectList;
 import uk.gov.hmcts.reform.prl.models.common.dynamic.DynamicMultiselectListElement;
 import uk.gov.hmcts.reform.prl.models.complextypes.PartyDetails;
+import uk.gov.hmcts.reform.prl.models.complextypes.manageorders.serveorders.EmailInformation;
+import uk.gov.hmcts.reform.prl.models.complextypes.manageorders.serveorders.PostalInformation;
+import uk.gov.hmcts.reform.prl.models.documents.Document;
+import uk.gov.hmcts.reform.prl.models.dto.ccd.BulkPrintOrderDetail;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.CaseData;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.ManageOrders;
 import uk.gov.hmcts.reform.prl.models.dto.notify.EmailTemplateVars;
 import uk.gov.hmcts.reform.prl.models.dto.notify.ManageOrderEmail;
+import uk.gov.hmcts.reform.prl.models.dto.notify.OrderEmailNotification;
 import uk.gov.hmcts.reform.prl.models.dto.notify.serviceofapplication.RespondentSolicitorEmail;
 import uk.gov.hmcts.reform.prl.models.email.EmailTemplateNames;
+import uk.gov.hmcts.reform.prl.models.email.SendgridEmailConfig;
+import uk.gov.hmcts.reform.prl.models.email.SendgridEmailTemplateNames;
+import uk.gov.hmcts.reform.prl.models.language.DocumentLanguage;
+import uk.gov.hmcts.reform.prl.services.time.Time;
 import uk.gov.hmcts.reform.prl.utils.CaseUtils;
+import uk.gov.hmcts.reform.prl.utils.EmailUtils;
 
+import java.io.IOException;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 import java.util.Optional;
+import java.util.UUID;
+import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.stream.Collectors;
+
+import static org.apache.commons.lang3.ObjectUtils.isNotEmpty;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.AM_LOWER_CASE;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.AM_UPPER_CASE;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.C100_CASE_TYPE;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.DATE_TIME_PATTERN;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.DOCUMENT_COVER_SHEET_SERVE_ORDER_HINT;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.NO;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.ORDER_COLLECTION;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.PM_LOWER_CASE;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.PM_UPPER_CASE;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.TASK_LIST_VERSION_V2;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.TASK_LIST_VERSION_V3;
+import static uk.gov.hmcts.reform.prl.utils.CaseUtils.hasDashboardAccess;
+import static uk.gov.hmcts.reform.prl.utils.ElementUtils.element;
+import static uk.gov.hmcts.reform.prl.utils.ElementUtils.nullSafeCollection;
 
 @Service
 @Slf4j
-@RequiredArgsConstructor
+@RequiredArgsConstructor(onConstructor = @__(@Autowired))
+@SuppressWarnings({"java:S3776", "java:S6204"})
 public class ManageOrderEmailService {
-
-    @Autowired
-    private EmailService emailService;
-
-    @Autowired
-    private CourtFinderService courtLocatorService;
+    public static final String NEW_AND_FINAL = "newAndFinal";
+    public static final String FINAL = "final";
+    public static final String NEW = "new";
+    public static final String MULTIPLE_ORDERS = "multipleOrders";
+    public static final String ORDERS = "#Orders";
+    public static final String NAME = "name";
+    public static final String DASH_BOARD_LINK = "dashBoardLink";
 
     @Value("${uk.gov.notify.email.application.email-id}")
     private String courtEmail;
-
     @Value("${xui.url}")
     private String manageCaseUrl;
-
     @Value("${citizen.url}")
     private String citizenDashboardUrl;
 
     private static final String URL_STRING = "/";
     private static final String URGENT_CASE = "Urgent ";
     private static final String DATE_FORMAT = "dd-MM-yyyy";
+    private static final String ORDER_TYPE = "OrderPack";
 
+    private final EmailService emailService;
+    private final ServiceOfApplicationPostService serviceOfApplicationPostService;
+    private final BulkPrintService bulkPrintService;
+    private final SendgridService sendgridService;
+    private final Time dateTime;
+    private final DocumentLanguageService documentLanguageService;
+    public static final String ENGLISH_EMAIL = "english";
+    public static final String WELSH_EMAIL = "welsh";
 
     public void sendEmail(CaseDetails caseDetails) {
         List<String> emailList = new ArrayList<>();
@@ -74,56 +121,6 @@ public class ManageOrderEmailService {
             LanguagePreference.english
         ));
 
-    }
-
-    public void sendEmailToApplicantAndRespondent(CaseDetails caseDetails) {
-        CaseData caseData = emailService.getCaseData(caseDetails);
-        SelectTypeOfOrderEnum isFinalOrder = CaseUtils.getSelectTypeOfOrder(caseData);
-        String caseTypeofApplication = CaseUtils.getCaseTypeOfApplication(caseData);
-        if (caseTypeofApplication.equalsIgnoreCase(PrlAppsConstants.C100_CASE_TYPE)) {
-            Map<String, String> applicantsMap = getEmailPartyWithName(caseData
-                                                                          .getApplicants());
-            Map<String, String> respondentMap = getEmailPartyWithName(caseData
-                                                                          .getRespondents());
-            for (Map.Entry<String, String> appValues : applicantsMap.entrySet()) {
-                if (!StringUtils.isEmpty(appValues.getKey())) {
-                    sendEmailToParty(isFinalOrder, appValues.getKey(),
-                                     buildApplicantRespondentEmail(caseDetails, appValues.getValue()),
-                                     caseData
-                    );
-                }
-            }
-
-            for (Map.Entry<String, String> appValues : respondentMap.entrySet()) {
-                if (!StringUtils.isEmpty(appValues.getKey())) {
-                    sendEmailToParty(isFinalOrder, appValues.getKey(),
-                                     buildApplicantRespondentEmail(caseDetails, appValues.getValue()),
-                                     caseData
-                    );
-                }
-            }
-        } else {
-            sendEmailForFlCaseType(caseDetails, caseData, isFinalOrder);
-        }
-    }
-
-
-    private void sendEmailForFlCaseType(CaseDetails caseDetails, CaseData caseData, SelectTypeOfOrderEnum isFinalOrder) {
-        if (!StringUtils.isEmpty(caseData.getApplicantsFL401().getSolicitorEmail())) {
-            sendEmailToParty(isFinalOrder, caseData.getApplicantsFL401().getSolicitorEmail(),
-                             buildApplicantRespondentEmail(
-                                 caseDetails, caseData.getApplicantsFL401().getRepresentativeFirstName()
-                                     + " " + caseData.getApplicantsFL401().getRepresentativeLastName()),
-                             caseData
-            );
-        }
-        if (!StringUtils.isEmpty(caseData.getRespondentsFL401().getEmail())) {
-            sendEmailToParty(isFinalOrder, caseData.getRespondentsFL401().getEmail(),
-                             buildApplicantRespondentEmail(caseDetails, caseData.getRespondentsFL401().getFirstName()
-                                 + " " + caseData.getRespondentsFL401().getFirstName()),
-                             caseData
-            );
-        }
     }
 
     public void sendFinalOrderIssuedNotification(CaseDetails caseDetails) {
@@ -191,41 +188,6 @@ public class ManageOrderEmailService {
         }
     }
 
-    private void sendEmailToParty(SelectTypeOfOrderEnum isFinalOrder,
-                                  String emailAddress,
-                                  EmailTemplateVars email,
-                                  CaseData caseData) {
-        emailService.send(
-            emailAddress,
-            (isFinalOrder == SelectTypeOfOrderEnum.finl) ? EmailTemplateNames.CA_DA_FINAL_ORDER_EMAIL
-                : EmailTemplateNames.CA_DA_MANAGE_ORDER_EMAIL,
-            email,
-            LanguagePreference.getPreferenceLanguage(caseData)
-        );
-    }
-
-    private Map<String, String> getEmailPartyWithName(List<Element<PartyDetails>> party) {
-        return party
-            .stream()
-            .map(Element::getValue)
-            .collect(Collectors.toMap(
-                PartyDetails::getEmail,
-                i -> i.getFirstName() + " " + i.getLastName()
-            ));
-    }
-
-    private EmailTemplateVars buildApplicantRespondentEmail(CaseDetails caseDetails, String name) {
-        CaseData caseData = emailService.getCaseData(caseDetails);
-
-        return ManageOrderEmail.builder()
-            .caseReference(String.valueOf(caseDetails.getId()))
-            .caseName(emailService.getCaseData(caseDetails).getApplicantCaseName())
-            .applicantName(name)
-            .courtName(caseData.getCourtName())
-            .dashboardLink(citizenDashboardUrl)
-            .build();
-    }
-
     private EmailTemplateVars buildRespondentEmail(CaseDetails caseDetails, PartyDetails partyDetails) {
         CaseData caseData = emailService.getCaseData(caseDetails);
         return ManageOrderEmail.builder()
@@ -272,7 +234,7 @@ public class ManageOrderEmailService {
             .getApplicants()
             .stream()
             .map(Element::getValue)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private List<Map<String, List<String>>> getRespondentSolicitor(CaseDetails caseDetails) {
@@ -290,7 +252,7 @@ public class ManageOrderEmailService {
                 ));
                 return temp;
             })
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private List<String> getEmailAddress(List<Element<PartyDetails>> partyDetails) {
@@ -299,7 +261,7 @@ public class ManageOrderEmailService {
             .map(Element::getValue)
             .filter(a -> a.getCanYouProvideEmailAddress().equals(YesOrNo.Yes))
             .map(PartyDetails::getEmail)
-            .collect(Collectors.toList());
+            .toList();
     }
 
 
@@ -321,7 +283,7 @@ public class ManageOrderEmailService {
             otherEmails = manageOrders.getOtherEmailAddress()
                 .stream()
                 .map(Element::getValue)
-                .collect(Collectors.toList());
+                .toList();
         }
 
         cafcassEmails.addAll(otherEmails);
@@ -349,126 +311,820 @@ public class ManageOrderEmailService {
             .caseUrgency(typeOfHearing)
             .issueDate(caseData.getIssueDate().format(dateTimeFormatter))
             .familyManNumber(caseData.getFamilymanCaseNumber() != null ? caseData.getFamilymanCaseNumber() : "")
-            .orderLink(manageCaseUrl + "/" + caseData.getId() + "#Orders")
+            .orderLink(manageCaseUrl + URL_STRING + caseData.getId() + ORDERS)
             .build();
     }
 
-    public void sendEmailWhenOrderIsServed(CaseDetails caseDetails) {
-        List<String> listOfOtherAndCafcassEmails = new ArrayList<>();
-        CaseData caseData = emailService.getCaseData(caseDetails);
-        ManageOrders manageOrders = caseData.getManageOrders();
-        String caseTypeofApplication = CaseUtils.getCaseTypeOfApplication(caseData);
-        SelectTypeOfOrderEnum isFinalOrder = CaseUtils.getSelectTypeOfOrder(caseData);
-        if (caseTypeofApplication.equalsIgnoreCase(PrlAppsConstants.C100_CASE_TYPE)) {
-            if (YesOrNo.No.equals(manageOrders.getServeToRespondentOptions())) {
-                log.info("** CA case email notifications***");
-                sendEmailToPartyOrSolicitor(manageOrders.getRecipientsOptions().getValue(),
-                                            caseData.getApplicants(),
-                                            isFinalOrder, caseDetails, caseData
-                );
-                sendEmailToPartyOrSolicitor(manageOrders.getRecipientsOptions().getValue(),
-                                            caseData.getRespondents(),
-                                            isFinalOrder, caseDetails, caseData
-                );
+    private EmailTemplateVars buildEmailTemplateVarsForCitizenWithDashBoardAccess(Map<String, Object> dynamicData, Element<PartyDetails> party) {
+
+        boolean isFinalOrderFlag = dynamicData.get(FINAL).equals(true);
+        boolean multipleOrderFlag = dynamicData.get(MULTIPLE_ORDERS).equals(true);
+        boolean newAndFinalOrderFlag = dynamicData.get(NEW_AND_FINAL).equals(true);
+        boolean languagePreferenceFlag = dynamicData.get(WELSH_EMAIL).equals(true);
+
+        return OrderEmailNotification
+            .builder()
+            .emailSubject(buildEmailSubjectForCitizenWithDashBoardAccess(isFinalOrderFlag, multipleOrderFlag,
+                newAndFinalOrderFlag, languagePreferenceFlag, false))
+            .emailTitle(buildEmailSubjectForCitizenWithDashBoardAccess(isFinalOrderFlag, multipleOrderFlag,
+                newAndFinalOrderFlag, languagePreferenceFlag, true))
+            .emailTitleWelsh(languagePreferenceFlag ? buildEmailTitleWelshForCitizenWithDashBoardAccess(isFinalOrderFlag,
+                multipleOrderFlag, newAndFinalOrderFlag) : "")
+            .emailText(buildEmailTextForCitizenWithDashBoardAccess(isFinalOrderFlag, multipleOrderFlag, newAndFinalOrderFlag))
+            .emailTextWelsh(languagePreferenceFlag ? buildEmailTextWelshForCitizenWithDashBoardAccess(isFinalOrderFlag,
+                multipleOrderFlag, newAndFinalOrderFlag) : "")
+            .multipleOrders(multipleOrderFlag || newAndFinalOrderFlag ? "orders" : "order")
+            .multipleOrdersWelsh(languagePreferenceFlag ? multipleOrdersWelsh(multipleOrderFlag, newAndFinalOrderFlag) : "")
+            .multipleOrdersWelshSentence(languagePreferenceFlag ? multipleOrdersWelshSentence(multipleOrderFlag, newAndFinalOrderFlag) : "")
+            .caseName(String.valueOf(dynamicData.get("caseName")))
+            .applicantName(party.getValue().getFirstName() + " " + party.getValue().getLastName())
+            .caseLink(String.valueOf(dynamicData.get(DASH_BOARD_LINK)))
+            .caseReference(String.valueOf(dynamicData.get("caseReference")))
+            .build();
+    }
+
+    private String multipleOrdersWelshSentence(boolean multipleOrderFlag, boolean newAndFinalOrderFlag) {
+        if (multipleOrderFlag || newAndFinalOrderFlag) {
+            return OrderEmailConstants.ORDERS_WELSH_SENTENCE;
+        } else {
+            return OrderEmailConstants.ORDER_WELSH_SENTENCE;
+        }
+    }
+
+    private String multipleOrdersWelsh(boolean multipleOrderFlag, boolean newAndFinalOrderFlag) {
+
+        if (multipleOrderFlag || newAndFinalOrderFlag) {
+            return OrderEmailConstants.ORDERS_WELSH;
+        } else {
+            return OrderEmailConstants.ORDER_WELSH;
+        }
+    }
+
+    private String buildEmailSubjectForCitizenWithDashBoardAccess(boolean isFinalOrderFlag, boolean multipleOrderFlag,
+                                                                  boolean newAndFinalOrderFLag, boolean languagePreferenceFlag,
+                                                                  boolean isTitle) {
+
+        if (!languagePreferenceFlag || isTitle) {
+            if (newAndFinalOrderFLag) {
+                return OrderEmailConstants.ORDER_SUBJECT_ENG_NEW_AND_FINAL;
+            } else if (multipleOrderFlag) {
+                if (isFinalOrderFlag) {
+                    return OrderEmailConstants.ORDERS_SUBJECT_ENG_FINAL;
+                } else {
+                    return OrderEmailConstants.ORDERS_SUBJECT_ENG_NEW;
+                }
+            } else {
+                if (isFinalOrderFlag) {
+                    return OrderEmailConstants.ORDER_SUBJECT_ENG_FINAL;
+                } else {
+                    return OrderEmailConstants.ORDER_SUBJECT_ENG_NEW;
+                }
             }
-            if (manageOrders.getServeOtherPartiesCA() != null && manageOrders.getServeOtherPartiesCA()
-                .contains(OtherOrganisationOptions.anotherOrganisation)
-                && DeliveryByEnum.email.equals(manageOrders.getDeliveryByOptionsCA())) {
-                manageOrders.getEmailInformationCA().stream().map(Element::getValue).forEach(value -> listOfOtherAndCafcassEmails
-                    .add(value.getEmailAddress()));
-            }
-            //send email notification to other people in the case
-            if (null != manageOrders.getOtherParties()) {
-                manageOrders.getOtherParties().getValue().stream().map(DynamicMultiselectListElement::getCode).forEach(
-                    id -> {
-                        String otherEmail = getOtherPeopleEmailAddress(id, caseData);
-                        if (null != otherEmail) {
-                            listOfOtherAndCafcassEmails.add(otherEmail);
-                        }
-                    });
-            }
-            //Send email notification to Cafcass or Cafcass cymru based on selection
-            if (getCafcassEmail(manageOrders) != null) {
-                listOfOtherAndCafcassEmails.add(getCafcassEmail(manageOrders));
-            }
-        } else if (caseTypeofApplication.equalsIgnoreCase(PrlAppsConstants.FL401_CASE_TYPE)) {
-            sendEmailForFlCaseType(caseDetails, caseData, isFinalOrder);
-            if (manageOrders.getServeOtherPartiesDA() != null && manageOrders.getServeOtherPartiesDA()
-                .contains(ServeOtherPartiesOptions.other)
-                && DeliveryByEnum.email.equals(manageOrders.getDeliveryByOptionsDA())) {
-                manageOrders.getEmailInformationDA().stream().map(Element::getValue).forEach(value -> listOfOtherAndCafcassEmails
-                    .add(value.getEmailAddress()));
+        } else {
+            if (newAndFinalOrderFLag) {
+                return OrderEmailConstants.ORDER_SUBJECT_WEL_NEW_AND_FINAL;
+            } else if (multipleOrderFlag) {
+                if (isFinalOrderFlag) {
+                    return OrderEmailConstants.ORDERS_SUBJECT_WEL_FINAL;
+                } else {
+                    return OrderEmailConstants.ORDERS_SUBJECT_WEL_NEW;
+                }
+            } else {
+                if (isFinalOrderFlag) {
+                    return OrderEmailConstants.ORDER_SUBJECT_WEL_FINAL;
+                } else {
+                    return OrderEmailConstants.ORDER_SUBJECT_WEL_NEW;
+                }
             }
         }
+    }
 
+    private String buildEmailTitleWelshForCitizenWithDashBoardAccess(boolean isFinalOrderFlag, boolean multipleOrderFlag,
+                                                                     boolean newAndFinalOrderFLag) {
+
+        if (newAndFinalOrderFLag) {
+            return OrderEmailConstants.ORDER_TITLE_WEL_NEW_AND_FINAL;
+        } else if (multipleOrderFlag) {
+            if (isFinalOrderFlag) {
+                return OrderEmailConstants.ORDERS_TITLE_WEL_FINAL;
+            } else {
+                return OrderEmailConstants.ORDERS_TITLE_WEL_NEW;
+            }
+        } else {
+            if (isFinalOrderFlag) {
+                return OrderEmailConstants.ORDER_TITLE_WEL_FINAL;
+            } else {
+                return OrderEmailConstants.ORDER_TITLE_WEL_NEW;
+            }
+        }
+    }
+
+    private String buildEmailTextForCitizenWithDashBoardAccess(boolean isFinalOrderFlag, boolean multipleOrderFlag,
+                                                               boolean newAndFinalOrderFLag) {
+
+        if (newAndFinalOrderFLag) {
+            return OrderEmailConstants.ORDER_ENG_NEW_AND_FINAL;
+        } else if (multipleOrderFlag) {
+            if (isFinalOrderFlag) {
+                return OrderEmailConstants.ORDERS_ENG_FINAL;
+            } else {
+                return OrderEmailConstants.ORDERS_ENG_NEW;
+            }
+        } else {
+            if (isFinalOrderFlag) {
+                return OrderEmailConstants.ORDER_ENG_FINAL;
+            } else {
+                return OrderEmailConstants.ORDER_ENG_NEW;
+            }
+        }
+    }
+
+    private String buildEmailTextWelshForCitizenWithDashBoardAccess(boolean isFinalOrderFlag, boolean multipleOrderFlag,
+                                                               boolean newAndFinalOrderFLag) {
+        if (newAndFinalOrderFLag) {
+            return OrderEmailConstants.ORDER_WEL_NEW_AND_FINAL;
+        } else if (multipleOrderFlag) {
+            if (isFinalOrderFlag) {
+                return OrderEmailConstants.ORDERS_WEL_FINAL;
+            } else {
+                return OrderEmailConstants.ORDERS_WEL_NEW;
+            }
+        } else {
+            if (isFinalOrderFlag) {
+                return OrderEmailConstants.ORDER_WEL_FINAL;
+            } else {
+                return OrderEmailConstants.ORDER_WEL_NEW;
+            }
+        }
+    }
+
+    public void sendEmailWhenOrderIsServed(String authorisation,
+                                           CaseData caseData,
+                                           Map<String, Object> caseDataMap) {
+        List<EmailInformation> otherOrganisationEmailList = new ArrayList<>();
+        List<PostalInformation> otherOrganisationPostList = new ArrayList<>();
+        ManageOrders manageOrders = caseData.getManageOrders();
+        final String caseTypeofApplication = CaseUtils.getCaseTypeOfApplication(caseData);
+        List<Element<BulkPrintOrderDetail>> bulkPrintOrderDetails = new ArrayList<>();
+        List<Document> orderDocuments = getServedOrderDocumentsAndAdditionalDocuments(caseData);
+        log.info("inside SendEmailWhenOrderIsServed**");
+        Map<String,Object> dynamicDataForEmail = getDynamicDataForEmail(caseData);
+        if (caseTypeofApplication.equalsIgnoreCase(PrlAppsConstants.C100_CASE_TYPE)) {
+            if (YesOrNo.No.equals(manageOrders.getServeToRespondentOptions())) {
+                log.info("*** CA non personal service email notifications ***");
+                handleNonPersonalServiceNotifications(
+                    authorisation,
+                    caseData,
+                    manageOrders,
+                    bulkPrintOrderDetails,
+                    orderDocuments,
+                    dynamicDataForEmail
+                );
+            } else if (YesOrNo.Yes.equals(manageOrders.getServeToRespondentOptions())) {
+                log.info("*** CA personal service notifications ***");
+                log.info("*** CA Personal service option selected {}",manageOrders.getServingRespondentsOptionsCA());
+                String servingRespondentsOptions = NO.equals(manageOrders.getDisplayLegalRepOption())
+                    ? manageOrders.getServingOptionsForNonLegalRep().getId() : manageOrders.getServingRespondentsOptionsCA().getId();
+                handleC100PersonalServiceNotifications(authorisation, caseData, orderDocuments, dynamicDataForEmail,
+                                                       servingRespondentsOptions,
+                                                       bulkPrintOrderDetails
+                );
+            }
+            //PRL-4225 - send order & additional docs to other people via post only
+            if (isNotEmpty(manageOrders.getOtherParties())) {
+                serveOrderToOtherPersons(authorisation,
+                                         manageOrders.getOtherParties(), caseData, orderDocuments, bulkPrintOrderDetails
+                );
+            }
+            //Send email notification to Cafcass or Cafcass cymru based on selection
+            String cafcassCymruEmailId = getCafcassCymruEmail(manageOrders);
+            if (cafcassCymruEmailId != null) {
+                sendEmailToCafcassCymru(caseData,cafcassCymruEmailId,authorisation, orderDocuments);
+            }
+            //get email and postal information for other organisations.
+            if (manageOrders.getServeOtherPartiesCA() != null && manageOrders.getServeOtherPartiesCA()
+                .contains(OtherOrganisationOptions.anotherOrganisation)) {
+                manageOrders.getServeOrgDetailsList().stream().map(Element::getValue).forEach(value -> {
+                    if (DeliveryByEnum.email.equals(value.getServeByPostOrEmail())) {
+                        otherOrganisationEmailList.add(value.getEmailInformation());
+                    } else {
+                        otherOrganisationPostList.add(value.getPostalInformation());
+                    }
+                });
+            }
+        } else if (caseTypeofApplication.equalsIgnoreCase(PrlAppsConstants.FL401_CASE_TYPE)) {
+            handleFL401ServeOrderNotifications(authorisation, caseData, orderDocuments, dynamicDataForEmail,
+                                               bulkPrintOrderDetails, otherOrganisationEmailList, otherOrganisationPostList);
+        }
         // Send email notification to other organisations
-        listOfOtherAndCafcassEmails.forEach(email ->
-                                                emailService.send(
-                                                    email,
-                                                    EmailTemplateNames.CAFCASS_OTHER,
-                                                    buildEmailToCafcassAndOtherParties(caseData),
-                                                    LanguagePreference.english
-                                                )
+        if (!otherOrganisationEmailList.isEmpty()) {
+            sendEmailToOtherOrganisation(otherOrganisationEmailList, authorisation, orderDocuments, dynamicDataForEmail);
+        }
+        // Send post to other organisations
+        if (!otherOrganisationPostList.isEmpty()) {
+            serveOrdersToOtherOrganisation(caseData, authorisation, orderDocuments, bulkPrintOrderDetails, otherOrganisationPostList);
+        }
+
+        //PRL-4225 - set bulkIds in the orderCollection & update in caseDataMap
+        addBulkPrintIdsInOrderCollection(caseData, bulkPrintOrderDetails);
+        caseDataMap.put(ORDER_COLLECTION, caseData.getOrderCollection());
+    }
+
+    private void handleFL401ServeOrderNotifications(String authorisation,
+                                                    CaseData caseData,
+                                                    List<Document> orderDocuments,
+                                                    Map<String, Object> dynamicDataForEmail,
+                                                    List<Element<BulkPrintOrderDetail>> bulkPrintOrderDetails,
+                                                    List<EmailInformation> otherOrganisationEmailList,
+                                                    List<PostalInformation> otherOrganisationPostList) {
+        ManageOrders manageOrders = caseData.getManageOrders();
+        log.info("*** DA Personal service represented serving option selected {}",manageOrders.getServingRespondentsOptionsDA());
+        log.info("*** DA Personal service unrepresented serving option selected {}", manageOrders.getServingOptionsForNonLegalRep());
+        String servingOptions = NO.equals(manageOrders.getDisplayLegalRepOption())
+            ? manageOrders.getServingOptionsForNonLegalRep().getId() : manageOrders.getServingRespondentsOptionsDA().getId();
+
+        handleFL401PersonalServiceNotifications(authorisation,
+                                                caseData,
+                                                orderDocuments,
+                                                dynamicDataForEmail,
+                                                servingOptions,
+                                                bulkPrintOrderDetails);
+
+        if (manageOrders.getServeOtherPartiesDA() != null && manageOrders.getServeOtherPartiesDA()
+            .contains(ServeOtherPartiesOptions.other)) {
+            manageOrders.getServeOrgDetailsList().stream().map(Element::getValue).forEach(value -> {
+                if (DeliveryByEnum.email.equals(value.getServeByPostOrEmail())) {
+                    otherOrganisationEmailList.add(value.getEmailInformation());
+                } else {
+                    otherOrganisationPostList.add(value.getPostalInformation());
+                }
+            });
+        }
+    }
+
+    private void handleC100PersonalServiceNotifications(String authorisation, CaseData caseData,
+                                                        List<Document> orderDocuments,
+                                                        Map<String, Object> dynamicDataForEmail,
+                                                        String respondentOption,
+                                                        List<Element<BulkPrintOrderDetail>> bulkPrintOrderDetails) {
+        if (!SoaCitizenServingRespondentsEnum.unrepresentedApplicant.getId()
+            .equals(respondentOption)) {
+            nullSafeCollection(caseData.getApplicants()).stream().findFirst().ifPresent(party -> {
+                dynamicDataForEmail.put("name", party.getValue().getRepresentativeFullName());
+                sendPersonalServiceNotifications(
+                    party,
+                    respondentOption,
+                    authorisation,
+                    orderDocuments,
+                    dynamicDataForEmail,
+                    caseData,
+                    bulkPrintOrderDetails
+                );
+            });
+        } else {
+            log.info("*** Send email/post notifications to applicants ***");
+            caseData.getApplicants().forEach(party -> sendNotificationsToParty(
+                caseData,
+                party,
+                authorisation,
+                dynamicDataForEmail,
+                orderDocuments,
+                bulkPrintOrderDetails,
+                SendgridEmailTemplateNames.SERVE_ORDER_CA_PERSONAL_APPLICANT_LIP
+            ));
+            //Added as part of PRL-5509
+            caseData.getRespondents().forEach(party -> sendSendGridLipOrderEmailToRespondent(party, dynamicDataForEmail));
+        }
+    }
+
+    private void sendSendGridLipOrderEmailToRespondent(Element<PartyDetails> party, Map<String, Object> dynamicDataForEmail) {
+        if (ContactPreferences.email.equals(party.getValue().getContactPreferences())
+            && isPartyProvidedWithEmail(party.getValue()) && hasDashboardAccess(party)) {
+            emailService.send(
+                party.getValue().getEmail(),
+                EmailTemplateNames.CA_LIP_ORDERS,
+                buildEmailTemplateVarsForCitizenWithDashBoardAccess(dynamicDataForEmail, party),
+                dynamicDataForEmail.get(WELSH_EMAIL).equals(true) ? LanguagePreference.welsh : LanguagePreference.english
+            );
+        }
+    }
+
+    private void sendNotificationsToParty(CaseData caseData,
+                                          Element<PartyDetails> party,
+                                          String authorisation,
+                                          Map<String, Object> dynamicDataForEmail,
+                                          List<Document> orderDocuments,
+                                          List<Element<BulkPrintOrderDetail>> bulkPrintOrderDetails,
+                                          SendgridEmailTemplateNames sengGridTemplate) {
+        log.debug("=== Party contact preference ==== {}", party.getValue().getContactPreferences());
+        if (ContactPreferences.email.equals(party.getValue().getContactPreferences())
+            && isPartyProvidedWithEmail(party.getValue())) {
+            dynamicDataForEmail.put("name", party.getValue().getLabelForDynamicList());
+            dynamicDataForEmail.put(DASH_BOARD_LINK, citizenDashboardUrl);
+
+            if (hasDashboardAccess(party)) {
+                //Send notification to party with access to dashboard using notify.gov
+                emailService.send(
+                    party.getValue().getEmail(),
+                    EmailTemplateNames.CA_LIP_ORDERS,
+                    buildEmailTemplateVarsForCitizenWithDashBoardAccess(dynamicDataForEmail, party),
+                    dynamicDataForEmail.get(WELSH_EMAIL).equals(true) ? LanguagePreference.welsh : LanguagePreference.english
+                );
+            } else {
+                //Send notification to party without access to dashboard using sendgrid
+                sendEmailViaSendGrid(
+                    authorisation,
+                    orderDocuments,
+                    dynamicDataForEmail,
+                    party.getValue().getEmail(),
+                    sengGridTemplate
+                );
+            }
+        } else {
+            log.info("*** Send orders to party via post using bulk print {}", party.getId());
+            sendOrdersToPartyAddressViaPost(
+                caseData,
+                authorisation,
+                orderDocuments,
+                bulkPrintOrderDetails,
+                party
+            );
+        }
+    }
+
+    private void handleFL401PersonalServiceNotifications(String authorisation,
+                                                         CaseData caseData,
+                                                         List<Document> orderDocuments,
+                                                         Map<String, Object> dynamicDataForEmail,
+                                                         String servingOptions,
+                                                         List<Element<BulkPrintOrderDetail>> bulkPrintOrderDetails) {
+        log.info("*** DA Personal service serving option selected {}", servingOptions);
+        //represented applicant options - applicantLegalRepresentative, courtAdmin and courtBailiff
+        if (!SoaCitizenServingRespondentsEnum.unrepresentedApplicant.getId().equals(servingOptions)) {
+            log.info("===== DA Serving represented applicant ====");
+            dynamicDataForEmail.put("name", caseData.getApplicantsFL401().getRepresentativeFullName());
+            sendPersonalServiceNotifications(
+                element(caseData.getApplicantsFL401().getPartyId(),
+                        caseData.getApplicantsFL401()),
+                servingOptions,
+                authorisation,
+                orderDocuments,
+                dynamicDataForEmail,
+                caseData,
+                bulkPrintOrderDetails
+            );
+        } else {
+            //PRL-5206 unrepresented applicant option - unrepresentedApplicant
+            log.info("===== DA Serving unrepresented applicant ====");
+            sendNotificationsToParty(
+                caseData,
+                element(caseData.getApplicantsFL401().getPartyId(),
+                        caseData.getApplicantsFL401()),
+                authorisation,
+                dynamicDataForEmail,
+                orderDocuments,
+                bulkPrintOrderDetails,
+                SendgridEmailTemplateNames.SERVE_ORDER_DA_PERSONAL_APPLICANT_LIP
+            );
+        }
+    }
+
+    private void sendPersonalServiceNotifications(Element<PartyDetails> partyElement,
+                                                  String respondentOption,
+                                                  String authorisation,
+                                                  List<Document> orderDocuments,
+                                                  Map<String, Object> dynamicDataForEmail,
+                                                  CaseData caseData,
+                                                  List<Element<BulkPrintOrderDetail>> bulkPrintOrderDetails) {
+        log.info("CA personal service email notifications: sendPersonalServiceNotifications: {}",respondentOption);
+        PartyDetails party = partyElement.getValue();
+        if (SoaSolicitorServingRespondentsEnum.applicantLegalRepresentative.getId().equals(respondentOption)
+            && isNotEmpty(party.getSolicitorEmail())) {
+            log.info("*** applicantLegalRepresentative: Sending email to applicant LR ");
+            sendEmailViaSendGrid(authorisation, orderDocuments, dynamicDataForEmail, party.getSolicitorEmail(),
+                                 SendgridEmailTemplateNames.SERVE_ORDER_PERSONAL_APPLICANT_SOLICITOR
+            );
+        } else if ((SoaSolicitorServingRespondentsEnum.courtAdmin.getId().equals(respondentOption)
+            || SoaSolicitorServingRespondentsEnum.courtBailiff.getId().equals(respondentOption))) {
+            //PRL-5365, PRL-5556 - send email/post notifications to all C100 applicants
+            if (CaseUtils.isCaseCreatedByCitizen(caseData)
+                && C100_CASE_TYPE.equalsIgnoreCase(caseData.getCaseTypeOfApplication())) {
+                log.info("*** courtAdmin/courtBailiff: Send email/post notifications to all C100 applicants");
+                caseData.getApplicants().forEach(applicant -> sendNotificationsToParty(
+                    caseData,
+                    applicant,
+                    authorisation,
+                    dynamicDataForEmail,
+                    orderDocuments,
+                    bulkPrintOrderDetails,
+                    SendgridEmailTemplateNames.SERVE_ORDER_APPLICANT_RESPONDENT
+                ));
+            } else if (isNotEmpty(party.getSolicitorEmail())) {
+                log.info("*** courtAdmin/courtBailiff: Sending email to applicant LR");
+                sendEmailViaSendGrid(authorisation, orderDocuments, dynamicDataForEmail, party.getSolicitorEmail(),
+                                     SendgridEmailTemplateNames.SERVE_ORDER_NON_PERSONAL_SOLLICITOR
+                );
+            } else {
+                log.info("*** courtAdmin/courtBailiff: Sending email/post to FL401 applicant LiP");
+                sendNotificationsToParty(
+                    caseData,
+                    partyElement,
+                    authorisation,
+                    dynamicDataForEmail,
+                    orderDocuments,
+                    bulkPrintOrderDetails,
+                    SendgridEmailTemplateNames.SERVE_ORDER_APPLICANT_RESPONDENT
+                );
+            }
+        }
+    }
+
+    private void sendEmailViaSendGrid(String authorisation,
+                                      List<Document> orderDocuments,
+                                      Map<String, Object> dynamicDataForEmail,
+                                      String emailAddress,
+                                      SendgridEmailTemplateNames sendgridEmailTemplateName) {
+        try {
+            sendgridService.sendEmailUsingTemplateWithAttachments(
+                sendgridEmailTemplateName,
+                authorisation,
+                SendgridEmailConfig.builder()
+                    .toEmailAddress(emailAddress)
+                    .dynamicTemplateData(dynamicDataForEmail)
+                    .listOfAttachments(orderDocuments)
+                    .languagePreference(LanguagePreference.english)
+                    .build()
+            );
+        } catch (IOException e) {
+            log.error("There is a failure in sending send grid email with exception {}",
+                      e.getMessage(), e);
+        }
+    }
+
+    private void sendEmailToCafcassCymru(CaseData caseData, String cafcassCymruEmailId,
+                                         String authorisation, List<Document> orderDocuments) {
+
+        Map<String, Object> dynamicData = getDynamicDataForEmail(caseData);
+        dynamicData.put(DASH_BOARD_LINK, manageCaseUrl + "/" + caseData.getId() + ORDERS);
+        try {
+            sendgridService.sendEmailUsingTemplateWithAttachments(
+                SendgridEmailTemplateNames.SERVE_ORDER_CAFCASS_CYMRU,
+                authorisation,
+                SendgridEmailConfig.builder().toEmailAddress(
+                    cafcassCymruEmailId).dynamicTemplateData(
+                    dynamicData).listOfAttachments(
+                    orderDocuments).languagePreference(LanguagePreference.english).build()
+            );
+        } catch (IOException e) {
+            log.error("there is a failure in sending email for email {} with exception {}",
+                      cafcassCymruEmailId, e.getMessage(), e);
+        }
+
+    }
+
+    private void handleNonPersonalServiceNotifications(String authorisation, CaseData caseData, ManageOrders manageOrders,
+                                                       List<Element<BulkPrintOrderDetail>> bulkPrintOrderDetails,
+                                                       List<Document> orderDocuments, Map<String, Object> dynamicDataForEmail) {
+        DynamicMultiSelectList recipientsOptions = manageOrders.getRecipientsOptions();
+        if (recipientsOptions != null) {
+
+            //applicants
+            sendEmailToSolicitorOrNotifyParties(recipientsOptions.getValue(),
+                                                caseData.getApplicants(),
+                                                caseData,
+                                                authorisation,
+                                                dynamicDataForEmail,
+                                                bulkPrintOrderDetails,
+                                                orderDocuments
+            );
+            //respondents
+            sendEmailToSolicitorOrNotifyParties(recipientsOptions.getValue(),
+                                                caseData.getRespondents(),
+                                                caseData,
+                                                authorisation,
+                                                dynamicDataForEmail,
+                                                bulkPrintOrderDetails,
+                                                orderDocuments
+            );
+        }
+    }
+
+    private void sendEmailToOtherOrganisation(List<EmailInformation> emailInformation,
+                                              String authorisation, List<Document> orderDocuments, Map<String, Object> dynamicData) {
+
+        emailInformation.forEach(value ->
+             sendEmailViaSendGrid(authorisation,
+                                  orderDocuments,
+                                  dynamicData,
+                                  value.getEmailAddress(),
+                                  SendgridEmailTemplateNames.SERVE_ORDER_ANOTHER_ORGANISATION)
         );
     }
 
-    private String getCafcassEmail(ManageOrders manageOrders) {
-        String cafcassEmail = null;
-        if (YesOrNo.Yes.equals(manageOrders.getCafcassCymruServedOptions())) {
-            cafcassEmail = manageOrders.getCafcassCymruEmail();
+    private Map<String, Object> getDynamicDataForEmail(CaseData caseData) {
+        Map<String, Object> dynamicData = EmailUtils.getCommonSendgridDynamicTemplateData(caseData);
+        dynamicData.put(DASH_BOARD_LINK, manageCaseUrl + URL_STRING + caseData.getId() + ORDERS);
+        if (null != caseData.getManageOrders() && null != caseData.getManageOrders().getServeOrderDynamicList()) {
+            List<String> selectedOrderIds = caseData.getManageOrders().getServeOrderDynamicList().getValue()
+                .stream().map(DynamicMultiselectListElement::getCode).toList();
+            AtomicBoolean newOrdersExists = new AtomicBoolean(false);
+            AtomicBoolean finalOrdersExists = new AtomicBoolean(false);
+            caseData.getOrderCollection().stream()
+                .filter(order -> selectedOrderIds.contains(order.getId().toString()))
+                .forEach(order -> {
+                    if (StringUtils.equals(
+                        order.getValue().getTypeOfOrder(),
+                        SelectTypeOfOrderEnum.interim.getDisplayedValue()
+                    ) || StringUtils.equals(
+                        order.getValue().getTypeOfOrder(),
+                        SelectTypeOfOrderEnum.general.getDisplayedValue()
+                    )) {
+                        log.info("New order is selected to serve {}",order.getId());
+                        newOrdersExists.set(true);
+                    } else if (StringUtils.equals(
+                        order.getValue().getTypeOfOrder(),
+                        SelectTypeOfOrderEnum.finl.getDisplayedValue()
+                    )) {
+                        log.info("Final order is selected to serve {}",order.getId());
+                        finalOrdersExists.set(true);
+                    }
+
+                });
+            setOrderSpecificDynamicFields(dynamicData,newOrdersExists,finalOrdersExists,selectedOrderIds);
+            DocumentLanguage documentLanguage = documentLanguageService.docGenerateLang(caseData);
+            dynamicData.put(ENGLISH_EMAIL, documentLanguage.isGenEng());
+            dynamicData.put(WELSH_EMAIL, documentLanguage.isGenWelsh());
         }
-        if (YesOrNo.Yes.equals(manageOrders.getCafcassServedOptions())) {
-            cafcassEmail = manageOrders.getCafcassEmailId();
-        }
-        return cafcassEmail;
+        return dynamicData;
     }
 
-    private String getOtherPeopleEmailAddress(String id, CaseData caseData) {
-        String other = null;
-        if (null != caseData.getOthersToNotify()) {
-            Optional<Element<PartyDetails>> otherPerson = caseData.getOthersToNotify().stream()
-                .filter(element -> element.getId().toString().equalsIgnoreCase(id)).findFirst();
-            if (otherPerson.isPresent() && YesOrNo.Yes.equals(otherPerson.get().getValue().getCanYouProvideEmailAddress())) {
-                other = otherPerson.get().getValue().getEmail();
+    private void setOrderSpecificDynamicFields(Map<String, Object> dynamicData, AtomicBoolean newOrdersExists,
+                                               AtomicBoolean finalOrdersExists, List<String> selectedOrderIds) {
+        setTypeOfOrderForEmail(dynamicData, newOrdersExists, finalOrdersExists);
+        setMultipleOrdersForEmail(dynamicData, selectedOrderIds);
+    }
+
+    private void setMultipleOrdersForEmail(Map<String, Object> dynamicData, List<String> selectedOrderIds) {
+        dynamicData.put(MULTIPLE_ORDERS, CollectionUtils.size(selectedOrderIds) > 1);
+    }
+
+    private void setTypeOfOrderForEmail(Map<String, Object> dynamicData, AtomicBoolean newOrdersExists, AtomicBoolean finalOrdersExists) {
+        dynamicData.put(NEW_AND_FINAL, false);
+        dynamicData.put(FINAL, false);
+        dynamicData.put(NEW, false);
+        if (newOrdersExists.get() && finalOrdersExists.get()) {
+            dynamicData.put(NEW_AND_FINAL, true);
+        } else if (newOrdersExists.get()) {
+            dynamicData.put(NEW, true);
+        } else if (finalOrdersExists.get()) {
+            dynamicData.put(FINAL, true);
+        }
+    }
+
+    private void addBulkPrintIdsInOrderCollection(CaseData caseData,
+                                                  List<Element<BulkPrintOrderDetail>> bulkPrintOrderDetails) {
+        caseData.getManageOrders().getServeOrderDynamicList().getValue()
+            .forEach(element -> nullSafeCollection(caseData.getOrderCollection())
+                .forEach(orderDetailsElement -> {
+                    if (orderDetailsElement.getId().toString().equals(element.getCode())) {
+                        List<Element<BulkPrintOrderDetail>> bulkPrints = CollectionUtils.isNotEmpty(orderDetailsElement.getValue()
+                                                                                                        .getBulkPrintOrderDetails())
+                            ? orderDetailsElement.getValue().getBulkPrintOrderDetails() : new ArrayList<>();
+                        bulkPrints.addAll(bulkPrintOrderDetails);
+                        orderDetailsElement.getValue()
+                            .setBulkPrintOrderDetails(bulkPrints);
+                    }
+                }));
+    }
+
+    private void serveOrdersToOtherOrganisation(CaseData caseData, String authorisation,
+                                                List<Document> orderDocuments, List<Element<BulkPrintOrderDetail>> bulkPrintOrderDetails,
+                                                List<PostalInformation> postalInformation) {
+        postalInformation.forEach(organisationPostalInfo -> {
+            if ((isNotEmpty(organisationPostalInfo.getPostalAddress()))
+                && isNotEmpty(organisationPostalInfo.getPostalAddress().getAddressLine1())) {
+                try {
+                    UUID bulkPrintId = sendOrderDocumentViaPost(caseData, organisationPostalInfo.getPostalAddress(),
+                                                                organisationPostalInfo.getPostalName(), authorisation, orderDocuments);
+                    log.info("** bulk print id {}", bulkPrintId);
+                    //PRL-4225 save bulk print details
+                    bulkPrintOrderDetails.add(element(
+                        buildBulkPrintOrderDetail(bulkPrintId, String.valueOf(organisationPostalInfo.hashCode()),
+                                                  organisationPostalInfo.getPostalName())));
+                } catch (Exception e) {
+                    log.error("Error in sending order docs to other person {}", organisationPostalInfo.hashCode());
+                    log.error("Exception occurred in sending order docs to other person", e);
+                }
+            } else {
+                log.info("Couldn't send serve order details to other person, address is null/empty for {}",
+                         organisationPostalInfo.hashCode());
             }
-        }
-        return other;
-    }
-
-    private void sendEmailToPartyOrSolicitor(List<DynamicMultiselectListElement> value,
-                                             List<Element<PartyDetails>> partyDetails,
-                                             SelectTypeOfOrderEnum isFinalOrder,
-                                             CaseDetails caseDetails, CaseData caseData) {
-        Map<String, String> partyMap = new HashMap<>();
-        value.forEach(element -> {
-            Map<String, String> partyMapTemp;
-            partyMapTemp = getPartyMap(element.getCode(), partyDetails);
-            partyMap.putAll(partyMapTemp);
         });
-        for (Map.Entry<String, String> appValues : partyMap.entrySet()) {
-            if (!StringUtils.isEmpty(appValues.getKey())) {
-                sendEmailToParty(isFinalOrder, appValues.getKey(),
-                                 buildApplicantRespondentEmail(caseDetails, appValues.getValue()),
-                                 caseData
+    }
+
+    private void sendOrdersToPartyAddressViaPost(CaseData caseData,
+                                                 String authorisation,
+                                                 List<Document> orderDocuments,
+                                                 List<Element<BulkPrintOrderDetail>> bulkPrintOrderDetails,
+                                                 Element<PartyDetails> partyElement) {
+        if ((isNotEmpty(partyElement.getValue())
+            && isNotEmpty(partyElement.getValue().getAddress()))
+            && isNotEmpty(partyElement.getValue().getAddress().getAddressLine1())) {
+            try {
+                UUID bulkPrintId = sendOrderDocumentViaPost(caseData, partyElement.getValue().getAddress(),
+                                                            partyElement.getValue().getLabelForDynamicList(),
+                                                            authorisation, orderDocuments
                 );
+                //PRL-4225 save bulk print details
+                bulkPrintOrderDetails.add(element(
+                    buildBulkPrintOrderDetail(
+                        bulkPrintId,
+                        String.valueOf(partyElement.getId()),
+                        partyElement.getValue().getLabelForDynamicList()
+                    )));
+            } catch (Exception e) {
+                log.error("Error in sending orders to party address {}", partyElement.getId());
+                log.error("Exception occurred in sending orders to party address", e);
             }
+        } else {
+            log.info(
+                "Couldn't post orders to party address, as address is null/empty for {}",
+                partyElement.getId());
         }
     }
 
-    private Map<String, String> getPartyMap(String code, List<Element<PartyDetails>> parties) {
-        Map<String, String> applicantMap = new HashMap<>();
-        Optional<Element<PartyDetails>> applicant = parties.stream()
-            .filter(element -> element.getId().toString().equalsIgnoreCase(code)).findFirst();
-        if (applicant.isPresent()) {
-            if (null != applicant.get().getValue().getSolicitorEmail()) {
-                applicantMap.put(applicant.get().getValue().getSolicitorEmail(), applicant.get().getValue()
-                    .getRepresentativeFirstName() + " "
-                    + applicant.get().getValue().getRepresentativeLastName());
-            } else if (YesOrNo.Yes.equals(applicant.get().getValue().getCanYouProvideEmailAddress())) {
-                applicantMap.put(applicant.get().getValue().getEmail(), applicant.get().getValue().getFirstName() + " "
-                    + applicant.get().getValue().getLastName());
+    private void serveOrderToOtherPersons(String authorisation,
+                                          DynamicMultiSelectList otherParties,
+                                          CaseData caseData,
+                                          List<Document> orderDocuments,
+                                          List<Element<BulkPrintOrderDetail>> bulkPrintOrderDetails) {
+        log.info("*** Send orders to other people via post using bulk print ***");
+        otherParties.getValue()
+            .stream()
+            .map(DynamicMultiselectListElement::getCode)
+            .forEach(id -> {
+                PartyDetails otherPerson = getOtherPerson(id, caseData);
+                sendOrdersToPartyAddressViaPost(
+                    caseData,
+                    authorisation,
+                    orderDocuments,
+                    bulkPrintOrderDetails,
+                    element(UUID.fromString(id), otherPerson)
+                );
+            });
+    }
+
+    private BulkPrintOrderDetail buildBulkPrintOrderDetail(UUID bulkPrintId,
+                                                           String id,
+                                                           String name) {
+        return BulkPrintOrderDetail.builder()
+            .bulkPrintId(String.valueOf(bulkPrintId))
+            .partyId(id)
+            .partyName(name)
+            .servedDateTime(dateTime.now().format(DateTimeFormatter.ofPattern(DATE_TIME_PATTERN, Locale.ENGLISH))
+                                .replace(AM_LOWER_CASE, AM_UPPER_CASE)
+                                .replace(PM_LOWER_CASE, PM_UPPER_CASE))
+            .build();
+    }
+
+    private String getCafcassCymruEmail(ManageOrders manageOrders) {
+        String cafcassCymruEmail = null;
+        if (YesOrNo.Yes.equals(manageOrders.getCafcassCymruServedOptions())) {
+            cafcassCymruEmail = manageOrders.getCafcassCymruEmail();
+        }
+        return cafcassCymruEmail;
+    }
+
+    private PartyDetails getOtherPerson(String id, CaseData caseData) {
+        List<Element<PartyDetails>> otherPartiesToNotify = TASK_LIST_VERSION_V2.equalsIgnoreCase(caseData.getTaskListVersion())
+            || TASK_LIST_VERSION_V3.equalsIgnoreCase(caseData.getTaskListVersion())
+            ? caseData.getOtherPartyInTheCaseRevised()
+            : caseData.getOthersToNotify();
+        if (null != otherPartiesToNotify) {
+            Optional<Element<PartyDetails>> otherPerson = otherPartiesToNotify.stream()
+                .filter(element -> element.getId().toString().equalsIgnoreCase(id))
+                .findFirst();
+            if (otherPerson.isPresent()) {
+                return otherPerson.get().getValue();
             }
         }
-        return applicantMap;
+        return null;
     }
+
+    private void sendEmailToSolicitorOrNotifyParties(List<DynamicMultiselectListElement> value,
+                                                     List<Element<PartyDetails>> partyDetails,
+                                                     CaseData caseData,
+                                                     String authorisation,
+                                                     Map<String, Object> dynamicDataForEmail,
+                                                     List<Element<BulkPrintOrderDetail>> bulkPrintOrderDetails,
+                                                     List<Document> orderDocuments) {
+        value.forEach(element -> {
+            Optional<Element<PartyDetails>> partyDataOptional = partyDetails.stream()
+                .filter(party -> party.getId().toString().equalsIgnoreCase(element.getCode())).findFirst();
+            if (partyDataOptional.isPresent()) {
+                PartyDetails partyData = partyDataOptional.get().getValue();
+                if (isSolicitorEmailExists(partyData)) {
+                    dynamicDataForEmail.put(NAME, partyData.getRepresentativeFullName());
+                    sendEmailViaSendGrid(
+                        authorisation,
+                        orderDocuments,
+                        dynamicDataForEmail,
+                        partyData.getSolicitorEmail(),
+                        SendgridEmailTemplateNames.SERVE_ORDER_NON_PERSONAL_SOLLICITOR
+                    );
+                } else {
+                    log.info("*** Send email/post notifications to parties ***");
+                    sendNotificationsToParty(
+                        caseData,
+                        partyDataOptional.get(),
+                        authorisation,
+                        dynamicDataForEmail,
+                        orderDocuments,
+                        bulkPrintOrderDetails,
+                        SendgridEmailTemplateNames.SERVE_ORDER_APPLICANT_RESPONDENT
+                    );
+                }
+            }
+        });
+    }
+
+    private UUID sendOrderDocumentViaPost(CaseData caseData,
+                                          Address address,
+                                          String name,
+                                          String authorisation,
+                                          List<Document> orderDocuments) throws Exception {
+        List<Document> documents = new ArrayList<>();
+        //generate cover letter
+        List<Document> coverLetterDocs = serviceOfApplicationPostService.getCoverSheets(
+            caseData,
+            authorisation,
+            address,
+            name,
+            DOCUMENT_COVER_SHEET_SERVE_ORDER_HINT
+        );
+        if (CollectionUtils.isNotEmpty(coverLetterDocs)) {
+            documents.addAll(coverLetterDocs);
+        }
+
+        //cover should be the first doc in the list, append all order docs
+        documents.addAll(orderDocuments);
+
+        return bulkPrintService.send(
+            String.valueOf(caseData.getId()),
+            authorisation,
+            ORDER_TYPE,
+            documents,
+            name
+        );
+    }
+
+    private static List<Document> getServedOrderDocumentsAndAdditionalDocuments(CaseData caseData) {
+        List<Document> orderDocuments = new ArrayList<>();
+        if (null != caseData.getManageOrders() && null != caseData.getManageOrders().getServeOrderDynamicList()) {
+            List<String> selectedOrderIds = caseData.getManageOrders().getServeOrderDynamicList().getValue()
+                .stream().map(DynamicMultiselectListElement::getCode).toList();
+            caseData.getOrderCollection().stream()
+                .filter(order -> selectedOrderIds.contains(order.getId().toString()))
+                .forEach(order -> {
+                    if (isNotEmpty(order.getValue().getOrderDocument())) {
+                        orderDocuments.add(order.getValue().getOrderDocument());
+                    }
+                    if (isNotEmpty(order.getValue().getOrderDocumentWelsh())) {
+                        orderDocuments.add(order.getValue().getOrderDocumentWelsh());
+                    }
+                });
+            //PRL-5621 - Fix not to duplicate additional document in case of multiple orders served together
+            if (CollectionUtils.isNotEmpty(caseData.getManageOrders().getServeOrderAdditionalDocuments())) {
+                caseData.getManageOrders().getServeOrderAdditionalDocuments().forEach(
+                    additionalDocumentEl -> orderDocuments.add(additionalDocumentEl.getValue()));
+            }
+        }
+        return orderDocuments;
+    }
+
+    private boolean isPartyProvidedWithEmail(PartyDetails party) {
+        return YesOrNo.Yes.equals(party.getCanYouProvideEmailAddress());
+    }
+
+    private boolean isSolicitorEmailExists(PartyDetails party) {
+        return StringUtils.isNotEmpty(party.getSolicitorEmail());
+    }
+
+    public void sendEmailToLegalRepresentativeOnRejection(CaseDetails caseDetails, DraftOrder draftOrder) {
+        CaseData caseData = emailService.getCaseData(caseDetails);
+        EmailTemplateVars emailTemplateVars = ManageOrderEmail.builder()
+            .caseReference(String.valueOf(caseData.getId()))
+            .caseName(caseData.getApplicantCaseName())
+            .fullName(draftOrder.getOtherDetails().getOrderCreatedBy())
+            .orderLink(manageCaseUrl + "/" + caseData.getId())
+            .instructions(caseData.getManageOrders().getInstructionsToLegalRepresentative())
+            .build();
+        emailService.send(
+            draftOrder.getOtherDetails().getOrderCreatedByEmailId(),
+            EmailTemplateNames.EMAIL_TO_LEGAL_REP_JUDGE_REJECTED_ORDER,
+            emailTemplateVars,
+            LanguagePreference.english
+        );
+    }
+
 }
