@@ -5,8 +5,10 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
+import uk.gov.hmcts.reform.prl.constants.PrlAppsConstants;
 import uk.gov.hmcts.reform.prl.enums.c100respondentsolicitor.RespondentSolicitorEvents;
 import uk.gov.hmcts.reform.prl.models.c100respondentsolicitor.RespondentEventValidationErrors;
+import uk.gov.hmcts.reform.prl.models.dto.ccd.CaseData;
 import uk.gov.hmcts.reform.prl.models.tasklist.RespondentTask;
 import uk.gov.hmcts.reform.prl.models.tasklist.RespondentTaskSection;
 import uk.gov.hmcts.reform.prl.services.TaskListRenderElements;
@@ -19,10 +21,8 @@ import java.util.stream.Stream;
 import static java.lang.String.format;
 import static java.util.Collections.emptyList;
 import static java.util.function.Function.identity;
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toMap;
 import static org.apache.commons.lang3.ObjectUtils.isEmpty;
-import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.URL_STRING;
 import static uk.gov.hmcts.reform.prl.models.tasklist.RespondentTaskSection.newSection;
 
 @Slf4j
@@ -47,77 +47,86 @@ public class RespondentSolicitorTaskListRenderer {
 
 
     public String render(List<RespondentTask> allTasks, List<RespondentEventValidationErrors> tasksErrors,
-                         String respondent, String representedRespondentName, boolean hasSubmitted, long caseId) {
+                         String respondent, String representedRespondentName, boolean hasSubmitted, CaseData caseData) {
         final List<String> lines = new LinkedList<>();
         if (!hasSubmitted) {
             lines.add(
-                DIV_CLASS_WIDTH_50
-                    + "<h3>Respond to the application for respondent " + representedRespondentName + "</h3>"
-                    + "<p>This online response combines forms C7 and C8."
-                    + " It also allows you to make your own allegations of harm and violence (C1A)"
-                    + " in the section of safety concerns.</p>"
-                    + DIV);
+                    DIV_CLASS_WIDTH_50
+                            + "<h3>Respond to the application for respondent " + representedRespondentName + "</h3>"
+                            + "<p>This online response combines forms C7 and C8."
+                            + " It also allows you to make your own allegations of harm and violence (C1A)"
+                            + " in the section of safety concerns.</p>"
+                            + DIV);
 
             lines.add(DIV_CLASS_WIDTH_50);
 
-            (groupInSections(allTasks))
-                .forEach(section -> lines.addAll(renderSection(section, respondent)));
+            (groupInSections(allTasks, caseData))
+                    .forEach(section -> lines.addAll(renderSection(section, respondent)));
 
             lines.add(DIV);
             lines.addAll(renderResSolTasksErrors(tasksErrors, respondent));
         } else {
-            String caseDocumentsUrl = manageCaseUrl + URL_STRING + caseId + "#Case%20documents";
+            String caseDocumentsUrl =  "/cases/case-details/" + caseData.getId() + "/#Case%20documents";
             lines.add(
-                DIV_CLASS_WIDTH_50
-                    + "<h3>Response for " + representedRespondentName + " has been successfully submitted.</h3>"
-                    + "<p>You can find the response at <a href=\"" + caseDocumentsUrl + "\">Case Documents</a> tab"
-                    + " in the section of safety concerns.</p>"
-                    + DIV);
+                    DIV_CLASS_WIDTH_50
+                            + "<h3>Response for " + representedRespondentName + " has been successfully submitted.</h3>"
+                            + "<p>You can find the response at <a href=\"" + caseDocumentsUrl + "\">Case Documents</a> tab"
+                            + " in the section of safety concerns.</p>"
+                            + DIV);
         }
 
         return String.join("\n\n", lines);
     }
 
-    private List<RespondentTaskSection> groupInSections(List<RespondentTask> allTasks) {
+    private List<RespondentTaskSection> groupInSections(List<RespondentTask> allTasks, CaseData caseData) {
         final Map<RespondentSolicitorEvents, RespondentTask> tasks
-            = allTasks.stream().collect(toMap(RespondentTask::getEvent, identity()));
+                = allTasks.stream().collect(toMap(RespondentTask::getEvent, identity()));
 
         final RespondentTaskSection consent = newSection("1. Consent to the Application")
-            .withTask(tasks.get(RespondentSolicitorEvents.CONSENT));
+                .withTask(tasks.get(RespondentSolicitorEvents.CONSENT));
 
-        final RespondentTaskSection yourDetails = newSection("2. Your details")
-            .withTask(tasks.get(RespondentSolicitorEvents.KEEP_DETAILS_PRIVATE))
-            .withTask(tasks.get(RespondentSolicitorEvents.CONFIRM_EDIT_CONTACT_DETAILS))
-            .withTask(tasks.get(RespondentSolicitorEvents.ATTENDING_THE_COURT));
+        final RespondentTaskSection yourDetails = newSection("2. Respondent's details")
+                .withTask(tasks.get(RespondentSolicitorEvents.KEEP_DETAILS_PRIVATE))
+                .withTask(tasks.get(RespondentSolicitorEvents.CONFIRM_EDIT_CONTACT_DETAILS))
+                .withTask(tasks.get(RespondentSolicitorEvents.ATTENDING_THE_COURT));
 
         final RespondentTaskSection applicationDetails = newSection("3. Application details")
-            .withTask(tasks.get(RespondentSolicitorEvents.MIAM))
-            .withTask(tasks.get(RespondentSolicitorEvents.CURRENT_OR_PREVIOUS_PROCEEDINGS));
+            .withTask(tasks.get(RespondentSolicitorEvents.MIAM));
 
-        final RespondentTaskSection safetyConcerns = newSection("4. Safety Concerns")
-            .withTask(tasks.get(RespondentSolicitorEvents.ALLEGATION_OF_HARM));
+        final RespondentTaskSection safetyConcerns;
+
+        if (null != caseData.getC1ADocument()) {
+            safetyConcerns = newSection("4. Safety Concerns")
+                    .withTask(tasks.get(RespondentSolicitorEvents.ALLEGATION_OF_HARM))
+                    .withTask(tasks.get(RespondentSolicitorEvents.RESPOND_ALLEGATION_OF_HARM));
+
+        } else {
+            safetyConcerns = newSection("4. Safety Concerns")
+                    .withTask(tasks.get(RespondentSolicitorEvents.ALLEGATION_OF_HARM));
+        }
 
         final RespondentTaskSection additionalInformation = newSection("5. Additional information")
-            .withTask(tasks.get(RespondentSolicitorEvents.INTERNATIONAL_ELEMENT))
-            .withTask(tasks.get(RespondentSolicitorEvents.ABILITY_TO_PARTICIPATE));
+            .withInfo(PrlAppsConstants.ONLY_COMPLETE_IF_RELEVANT)
+            .withTask(tasks.get(RespondentSolicitorEvents.OTHER_PROCEEDINGS))
+                .withTask(tasks.get(RespondentSolicitorEvents.INTERNATIONAL_ELEMENT))
+                .withTask(tasks.get(RespondentSolicitorEvents.ABILITY_TO_PARTICIPATE));
 
         final RespondentTaskSection viewResponse = newSection("6. View PDF response")
-            .withTask(tasks.get(RespondentSolicitorEvents.VIEW_DRAFT_RESPONSE));
+                .withTask(tasks.get(RespondentSolicitorEvents.VIEW_DRAFT_RESPONSE));
 
         final RespondentTaskSection submit = newSection("7. Submit")
-            .withTask(tasks.get(RespondentSolicitorEvents.SUBMIT));
+                .withTask(tasks.get(RespondentSolicitorEvents.SUBMIT));
 
         return Stream.of(
-            consent,
-            yourDetails,
-            applicationDetails,
-            safetyConcerns,
-            additionalInformation,
-            viewResponse,
-            submit
-        )
-            .filter(RespondentTaskSection::hasAnyTask)
-            .collect(toList());
+                        consent,
+                        yourDetails,
+                        applicationDetails,
+                        safetyConcerns,
+                        additionalInformation,
+                        viewResponse,
+                        submit
+                ).filter(RespondentTaskSection::hasAnyTask)
+                .toList();
     }
 
     private List<String> renderSection(RespondentTaskSection sec, String respondent) {
@@ -148,27 +157,27 @@ public class RespondentSolicitorTaskListRenderer {
                     lines.add(taskListRenderElements.renderRespondentSolicitorLink(respondentTask, respondent));
                 } else if (respondentTask.getEvent().equals(RespondentSolicitorEvents.SUBMIT)) {
                     lines.add(taskListRenderElements.renderRespondentDisabledLink(respondentTask)
-                                  + taskListRenderElements.renderImage(CANNOT_START_YET, "Cannot start yet"));
+                            + taskListRenderElements.renderImage(CANNOT_START_YET, "Cannot start yet"));
                 } else {
                     lines.add(taskListRenderElements.renderRespondentSolicitorLink(respondentTask, respondent)
-                                  + taskListRenderElements.renderImage(NOT_STARTED, "Not started"));
+                            + taskListRenderElements.renderImage(NOT_STARTED, "Not started"));
                 }
                 break;
             case IN_PROGRESS:
                 lines.add(taskListRenderElements.renderRespondentSolicitorLink(respondentTask, respondent)
-                              + taskListRenderElements.renderImage(IN_PROGRESS, "In progress"));
+                        + taskListRenderElements.renderImage(IN_PROGRESS, "In progress"));
                 break;
             case MANDATORY_COMPLETED:
                 lines.add(taskListRenderElements.renderRespondentSolicitorLink(respondentTask, respondent)
-                              + taskListRenderElements.renderImage(INFORMATION_ADDED, "Information added"));
+                        + taskListRenderElements.renderImage(INFORMATION_ADDED, "Information added"));
                 break;
             case FINISHED:
                 if (respondentTask.getEvent().equals(RespondentSolicitorEvents.SUBMIT)) {
                     lines.add(taskListRenderElements.renderRespondentSolicitorLink(respondentTask, respondent)
-                                  + taskListRenderElements.renderImage(NOT_STARTED, "Not started yet"));
+                            + taskListRenderElements.renderImage(NOT_STARTED, "Not started yet"));
                 } else {
                     lines.add(taskListRenderElements.renderRespondentSolicitorLink(respondentTask, respondent)
-                                  + taskListRenderElements.renderImage(FINISHED, "Finished"));
+                            + taskListRenderElements.renderImage(FINISHED, "Finished"));
                 }
                 break;
             default:
@@ -184,14 +193,14 @@ public class RespondentSolicitorTaskListRenderer {
             return emptyList();
         }
         final List<String> errors = taskErrors.stream()
-            .flatMap(task -> task.getErrors()
-                .stream()
-                .map(error -> format(
-                    "%s in %s",
-                    error,
-                    taskListRenderElements.renderRespondentSolicitorLink(task.getEvent(), respondent)
-                )))
-            .collect(toList());
+                .flatMap(task -> task.getErrors()
+                        .stream()
+                        .map(error -> format(
+                                "%s in %s",
+                                error,
+                                taskListRenderElements.renderRespondentSolicitorLink(task.getEvent(), respondent)
+                        )))
+                .toList();
         return taskListRenderElements.renderCollapsible("Why can't I submit my application?", errors);
     }
 }
